--- a/publications/index.html
+++ b/publications/index.html
@@ -1,204 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
-	
-	<head>
-	<meta charset="utf-8">
-	<meta name="viewport" width="device-width, initial-scale=1.0">
-	<meta name="description" content="Publications">
-	<meta name="author" content="Hemanth Sabbella">
-	<meta property="og:image" content="img/hemanth_small.jpg" />
-	<!-- favicon
-	<link rel="shortcut icon" href="/img/ico/favicon.png">
-	-->
-	<title>Publications | Hemanth </title>		
-	<!-- styles -->
-	<link href="/css/bootstrap.css" rel="stylesheet">
-	<link href="/css/jumbotron-narrow.css" rel="stylesheet">
-	<link href="/css/style.css" rel="stylesheet">
-	
-	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!--[if lt IE 9]>
-  <script src="../../assets/js/html5shiv.js"></script>
-  <script src="../../assets/js/respond.min.js"></script>
-	<![endif]-->
-	<!-- google analytics - i will not share this data with google -->
-	<!--
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" width="device-width, initial-scale=1.0">
+  <meta name="description" content="Publications">
+  <meta name="author" content="Hemanth Sabbella">
+  <meta property="og:image" content="img/hemanth_small.jpg" />
+  <title>Publications | Hemanth </title>
 
-		  ga('create', 'UA-38506466-1', 'jmcglone.com');
-		  ga('send', 'pageview');
+  <!-- styles -->
+  <link href="/css/bootstrap.css" rel="stylesheet">
+  <link href="/css/jumbotron-narrow.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
 
-		</script> -->	
+  <!-- override link and heading colors -->
+  <style>
+    :root {
+      --ocean-primary: #0096C7;
+      --ocean-hover:   #006494;
+    }
+    a {
+      color: var(--ocean-primary);
+      text-decoration: none;
+    }
+    a:hover,
+    a:focus {
+      color: var(--ocean-hover);
+      text-decoration: underline;
+    }
+  </style>
 
-	 <style>
-        .orange-background {
-            background-color: #81de76;
-            color: white;
-            padding: 1px;
-        }
-    </style>	
+  <!-- HTML5 shim and Respond.js IE8 support -->
+  <!--[if lt IE 9]>
+    <script src="../../assets/js/html5shiv.js"></script>
+    <script src="../../assets/js/respond.min.js"></script>
+  <![endif]-->
 </head>
 
-	
-	<body>
-		<div class="container">
-			
-			<div class="header">
-	<ul class="nav nav-pills pull-right">
-		</a></li>
-		<!-- <li class="passive"><a href="/projects" title="Projects">Projects</a></li> -->
-		<!-- <li class="passive"><a href="/notes" title="Notes">Notes</a></li> -->
-		<li class="passive"><a href="/projects" title="Projects" style="text-transform: none;">Projects</a></li>
-		<li class=""><a href="/publications" title="Publications" style="text-transform: none;">Publications</a></li>
-		<li class="passive"><a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing" title="CV" style="text-transform: none;">CV</a></li>
-	</ul>
-	<h3 class="text-muted" style="text-transform: none;"><a href="/">Hemanth Sabbella</a></h3>
-</div> <!-- /header -->
+<body>
+  <div class="container">
 
-<div class="publications">
-  <a style="font-size: 21px; color: #428bca;">Conferences & Journals</a>
-  <hr>
+    <div class="header">
+      <ul class="nav nav-pills pull-right">
+        <li class="passive">
+          <a href="/projects" title="Projects" style="text-transform: none;">Projects</a>
+        </li>
+        <li>
+          <a href="/publications" title="Publications" style="text-transform: none;">Publications</a>
+        </li>
+        <li class="passive">
+          <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing"
+             title="CV" style="text-transform: none;">CV</a>
+        </li>
+      </ul>
+      <h3 class="text-muted" style="text-transform: none;">
+        <a href="/">Hemanth Sabbella</a>
+      </h3>
+    </div> <!-- /header -->
 
-  <ol>
-    <li>
-      <p>
-        <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[IROS'24]</span>
-        D. Rathnayake, <u>H. Sabbella</u>, M. Radhakrishnan, A. Misra,
-        <a href="https://ink.library.smu.edu.sg/sis_research/9230/" target="_blank">
-          "D2SR: Decentralized Detection, De-synchronization, and Recovery of LiDAR Interference",
-        </a>
-        <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</em>, 2024.
-      </p>
-    </li>
-    <li>
-      <p>
-        <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[PerCom'24]</span>
-        <u>H. Sabbella</u>, D. Sanjaya Weerakoon, M. Gulati, A. Misra,
-        <a href="https://ieeexplore.ieee.org/abstract/document/10494427" target="_blank">
-          "PA2BLO: Low-Power, Personalized Audio Badge",
-        </a>
-        <em>IEEE International Conference on Pervasive Computing and Communications (PerCom)</em>, 2024.
-      </p>
-    </li>
-    <li>
-      <p>
-        <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[MMSys'23]</span>
-        I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra,
-        <a href="https://dl.acm.org/doi/10.1145/3587819.3590986" target="_blank">
-          "MOSAIC: Spatially-Multiplexed Edge AI Optimization over Multiple Concurrent Video Sensing Streams",
-        </a>
-        <em>ACM Multimedia Systems (MMSys)</em>, 2023.
-      </p>
-    </li>
-    <li>
-      <p>
-        <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[ISCAS'22]</span>
-        <u>H. R. Sabbella</u>, A. R. Nair, V. Gumme, S. S. Yadav, S. Chakrabartty, C. S. Thakur,
-        <a href="https://ieeexplore.ieee.org/document/9937827" target="_blank">
-          "An Always-On tinyML Acoustic Classifier for Ecological Applications",
-        </a>
-        <em>IEEE International Symposium on Circuits and Systems (ISCAS)</em>, 2022.
-      </p>
-    </li>
-    <li>
-      <p>
-        <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[Sensors'22]</span>
-        S. C. G. Kiruba Daniel, P. S. Pai, <u>Hemanth Reddy Sabbella</u>, K. Singh, A. Rangaiah, S. G. Basawarajappa, C. S. Thakur,
-        <a href="https://ieeexplore.ieee.org/document/9854404" target="_blank">
-          "Handheld, Low-Cost, Aptamer-Based Sensing Device for Rapid SARS-CoV-2 RNA Detection Using Novelly Synthesized Gold Nanoparticles",
-        </a>
-        <em>IEEE Sensors Journal</em>, 2022.
-      </p>
-    </li>
-  </ol>
+    <div class="publications">
+      <a style="font-size: 21px; color: var(--ocean-primary);">Conferences &amp; Journals</a>
+      <hr>
 
-  <hr>
-  <a style="font-size: 21px; color: #428bca;">Workshops</a>
-  <hr>
+      <ol>
+        <li>
+          <p>
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
+              [IROS'24]
+            </span>
+            D. Rathnayake, <u>H. Sabbella</u>, M. Radhakrishnan, A. Misra,
+            <a href="https://ink.library.smu.edu.sg/sis_research/9230/" target="_blank">
+              "D2SR: Decentralized Detection, De-synchronization, and Recovery of LiDAR Interference",
+            </a>
+            <em>IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)</em>, 2024.
+          </p>
+        </li>
+        <li>
+          <p>
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
+              [PerCom'24]
+            </span>
+            <u>H. Sabbella</u>, D. Sanjaya Weerakoon, M. Gulati, A. Misra,
+            <a href="https://ieeexplore.ieee.org/abstract/document/10494427" target="_blank">
+              "PA2BLO: Low-Power, Personalized Audio Badge",
+            </a>
+            <em>IEEE International Conference on Pervasive Computing and Communications (PerCom)</em>, 2024.
+          </p>
+        </li>
+        <li>
+          <p>
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
+              [MMSys'23]
+            </span>
+            I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra,
+            <a href="https://dl.acm.org/doi/10.1145/3587819.3590986" target="_blank">
+              "MOSAIC: Spatially-Multiplexed Edge AI Optimization over Multiple Concurrent Video Sensing Streams",
+            </a>
+            <em>ACM Multimedia Systems (MMSys)</em>, 2023.
+          </p>
+        </li>
+        <li>
+          <p>
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
+              [ISCAS'22]
+            </span>
+            <u>H. R. Sabbella</u>, A. R. Nair, V. Gumme, S. S. Yadav, S. Chakrabartty, C. S. Thakur,
+            <a href="https://ieeexplore.ieee.org/document/9937827" target="_blank">
+              "An Always-On tinyML Acoustic Classifier for Ecological Applications",
+            </a>
+            <em>IEEE International Symposium on Circuits and Systems (ISCAS)</em>, 2022.
+          </p>
+        </li>
+        <li>
+          <p>
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
+              [Sensors'22]
+            </span>
+            S. C. G. Kiruba Daniel, P. S. Pai, <u>Hemanth Reddy Sabbella</u>, K. Singh, A. Rangaiah, S. G. Basawarajappa, C. S. Thakur,
+            <a href="https://ieeexplore.ieee.org/document/9854404" target="_blank">
+              "Handheld, Low-Cost, Aptamer-Based Sensing Device for Rapid SARS-CoV-2 RNA Detection Using Novelly Synthesized Gold Nanoparticles",
+            </a>
+            <em>IEEE Sensors Journal</em>, 2022.
+          </p>
+        </li>
+      </ol>
 
-  <ol>
-    <li>
-      <p>
-        <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[CoMoRea, PerCom'25]</span>
-        <u>H. Sabbella*</u>, A. Mukherjee*, T. Jeck Chuang, H. Yee Low, D. Ma, A. Misra,
-        <a href="#" target="_blank">
-          "Improving the Responsiveness of Fall Detection using Spiking Neural Networks",
-        </a>
-        <em>IEEE International Conference on Pervasive Computing and Communications Workshops (PerCom Workshops)</em>, 2025.
-      </p>
-    </li>
-  </ol>
+      <hr>
+      <a style="font-size: 21px; color: var(--ocean-primary);">Workshops</a>
+      <hr>
 
-  <hr>
-  <a style="font-size: 21px; color: #428bca;">Demos & Posters</a>
-  <hr>
+      <ol>
+        <li>
+          <p>
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
+              [CoMoRea, PerCom'25]
+            </span>
+            <u>H. Sabbella*</u>, A. Mukherjee*, T. Jeck Chuang, H. Yee Low, D. Ma, A. Misra,
+            <a href="#" target="_blank">
+              "Improving the Responsiveness of Fall Detection using Spiking Neural Networks",
+            </a>
+            <em>IEEE International Conference on Pervasive Computing and Communications Workshops (PerCom Workshops)</em>, 2025.
+          </p>
+        </li>
+      </ol>
 
-  <ol>
-    <li>
-      <p>
-        <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[COMSNETS'24]</span>
-        I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra,
-        <a href="#" target="_blank">
-          "Demonstrating Canvas-based Processing of Multiple Camera Streams at the Edge",
-        </a>
-        <em>International Conference on COMmunication Systems & NETworkS (COMSNETS)</em>, 2024.
-      </p>
-    </li>
-    <li>
-      <p>
-        <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[tinyML Forum'21]</span>
-        <u>Hemanth Reddy Sabbella</u>,
-        <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg" target="_blank">
-          "Bird Hotspots: A tinyML Acoustic Classification System for Ecological Insights",
-        </a>
-        <em>tinyML Asia Technical Forum</em>, 2021.
-      </p>
-    </li>
-  </ol>
+      <hr>
+      <a style="font-size: 21px; color: var(--ocean-primary);">Demos &amp; Posters</a>
+      <hr>
 
-  <hr>
-  <a style="font-size: 21px; color: #428bca;">Patents</a>
-  <hr>
+      <ol>
+        <li>
+          <p>
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
+              [COMSNETS'24]
+            </span>
+            I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra,
+            <a href="#" target="_blank">
+              "Demonstrating Canvas-based Processing of Multiple Camera Streams at the Edge",
+            </a>
+            <em>International Conference on COMmunication Systems &amp; NETworkS (COMSNETS)</em>, 2024.
+          </p>
+        </li>
+        <li>
+          <p>
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
+              [tinyML Forum'21]
+            </span>
+            <u>Hemanth Reddy Sabbella</u>,
+            <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg" target="_blank">
+              "Bird Hotspots: A tinyML Acoustic Classification System for Ecological Insights",
+            </a>
+            <em>tinyML Asia Technical Forum</em>, 2021.
+          </p>
+        </li>
+      </ol>
 
-  <ol>
-    <li>
-      <p>
-        <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[Granted]</span>
-        S. C. G. Kiruba Daniel, Neeraja, <u>Hemanth R. Sabbella</u>, C. S. Thakur,
-        "Method of Synthesis of Metal Nanoparticles with Reusable, Solid-State Reducing Agent",
-        <em>Indian Patent No. 528,512</em>.
-      </p>
-    </li>
-  </ol>
-</div>
+      <hr>
+      <a style="font-size: 21px; color: var(--ocean-primary);">Patents</a>
+      <hr>
 
-			
-			<div class="footer">
-	<div class="row">
-	<div class="col-sm-8">
-	<p><small></small></p>
-	</div>
-	<div class="col-sm-4">
-	<p class="pull-right"><small></small></p>
-	</div>
-	</div>
-</div> <!-- /footer -->
+      <ol>
+        <li>
+          <p>
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">
+              [Granted]
+            </span>
+            S. C. G. Kiruba Daniel, Neeraja, <u>Hemanth R. Sabbella</u>, C. S. Thakur,
+            "Method of Synthesis of Metal Nanoparticles with Reusable, Solid-State Reducing Agent",
+            <em>Indian Patent No. 528,512</em>.
+          </p>
+        </li>
+      </ol>
+    </div>
 
-		
-		</div> <!-- /container -->
-	
-	
-		<!-- javascript at the end of the doc so page loads faster -->
-<script src="https://code.jquery.com/jquery.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/library.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.js"></script>
+    <div class="footer">
+      <div class="row">
+        <div class="col-sm-8"><p><small></small></p></div>
+        <div class="col-sm-4"><p class="pull-right"><small></small></p></div>
+      </div>
+    </div> <!-- /footer -->
 
-	
-	</body>
+  </div> <!-- /container -->
 
+  <!-- javascript at the end of the doc so page loads faster -->
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/library.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.js"></script>
+</body>
 </html>
