--- a/publications/index.html
+++ b/publications/index.html
@@ -29,6 +29,12 @@
       text-decoration: underline;
     }
   </style>
+
+  <!-- HTML5 shim and Respond.js IE8 support -->
+  <!--[if lt IE 9]>
+    <script src="../../assets/js/html5shiv.js"></script>
+    <script src="../../assets/js/respond.min.js"></script>
+  <![endif]-->
 </head>
 
 <body>
@@ -56,11 +62,10 @@
       <p style="font-size: 21px; color: var(--ocean-primary);">Conferences &amp; Journals</p>
       <hr>
 
-      <ul style="list-style: none; padding-left: 0;">
+      <ol>
         <li>
           <p>
-            C1. <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[IROS'24]</span>
-            D. Rathnayake, <u>H. Sabbella</u>, M. Radhakrishnan, A. Misra,
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 4px;">[IROS'24]</span> D. Rathnayake, <u>H. Sabbella</u>, M. Radhakrishnan, A. Misra,
             <a href="https://ink.library.smu.edu.sg/sis_research/9230/" target="_blank">
               "D2SR: Decentralized Detection, De-synchronization, and Recovery of LiDAR Interference",
             </a>
@@ -69,8 +74,7 @@
         </li>
         <li>
           <p>
-            C2. <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[PerCom'24]</span>
-            <u>H. Sabbella</u>, D. Sanjaya Weerakoon, M. Gulati, A. Misra,
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[PerCom'24]</span> <u>H. Sabbella</u>, D. Sanjaya Weerakoon, M. Gulati, A. Misra,
             <a href="https://ieeexplore.ieee.org/abstract/document/10494427" target="_blank">
               "PA2BLO: Low-Power, Personalized Audio Badge",
             </a>
@@ -79,8 +83,7 @@
         </li>
         <li>
           <p>
-            C3. <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[MMSys'23]</span>
-            I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra,
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[MMSys'23]</span> I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra,
             <a href="https://dl.acm.org/doi/10.1145/3587819.3590986" target="_blank">
               "MOSAIC: Spatially-Multiplexed Edge AI Optimization over Multiple Concurrent Video Sensing Streams",
             </a>
@@ -89,8 +92,7 @@
         </li>
         <li>
           <p>
-            C4. <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[ISCAS'22]</span>
-            <u>H. R. Sabbella</u>, A. R. Nair, V. Gumme, S. S. Yadav, S. Chakrabartty, C. S. Thakur,
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[ISCAS'22]</span> <u>H. R. Sabbella</u>, A. R. Nair, V. Gumme, S. S. Yadav, S. Chakrabartty, C. S. Thakur,
             <a href="https://ieeexplore.ieee.org/document/9937827" target="_blank">
               "An Always-On tinyML Acoustic Classifier for Ecological Applications",
             </a>
@@ -99,42 +101,39 @@
         </li>
         <li>
           <p>
-            J1. <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[Sensors'22]</span>
-            S. C. G. Kiruba Daniel, P. S. Pai, <u>Hemanth Reddy Sabbella</u>, K. Singh, A. Rangaiah, S. G. Basawarajappa, C. S. Thakur,
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[Sensors'22]</span> S. C. G. Kiruba Daniel, P. S. Pai, <u>Hemanth Reddy Sabbella</u>, K. Singh, A. Rangaiah, S. G. Basawarajappa, C. S. Thakur,
             <a href="https://ieeexplore.ieee.org/document/9854404" target="_blank">
               "Handheld, Low-Cost, Aptamer-Based Sensing Device for Rapid SARS-CoV-2 RNA Detection Using Novelly Synthesized Gold Nanoparticles",
             </a>
             <em>IEEE Sensors Journal</em>, 2022.
           </p>
         </li>
-      </ul>
+      </ol>
 
       <hr>
       <p style="font-size: 21px; color: var(--ocean-primary);">Workshops</p>
       <hr>
 
-      <ul style="list-style: none; padding-left: 0;">
+      <ol>
         <li>
           <p>
-            W1. <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[CoMoRea, PerCom'25]</span>
-            <u>H. Sabbella*</u>, A. Mukherjee*, T. Jeck Chuang, H. Yee Low, D. Ma, A. Misra,
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[CoMoRea, PerCom'25]</span> <u>H. Sabbella*</u>, A. Mukherjee*, T. Jeck Chuang, H. Yee Low, D. Ma, A. Misra,
             <a href="#" target="_blank">
               "Improving the Responsiveness of Fall Detection using Spiking Neural Networks",
             </a>
             <em>IEEE International Conference on Pervasive Computing and Communications Workshops (PerCom Workshops)</em>, 2025.
           </p>
         </li>
-      </ul>
+      </ol>
 
       <hr>
       <p style="font-size: 21px; color: var(--ocean-primary);">Demos &amp; Posters</p>
       <hr>
 
-      <ul style="list-style: none; padding-left: 0;">
+      <ol>
         <li>
           <p>
-            D1. <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[COMSNETS'24]</span>
-            I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra,
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[COMSNETS'24]</span> I. Gokarn, <u>H. Sabbella</u>, Y. Hu, T. Abdelzaher, A. Misra,
             <a href="#" target="_blank">
               "Demonstrating Canvas-based Processing of Multiple Camera Streams at the Edge",
             </a>
@@ -143,30 +142,28 @@
         </li>
         <li>
           <p>
-            D2. <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[tinyML Forum'21]</span>
-            <u>Hemanth Reddy Sabbella</u>,
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[tinyML Forum'21]</span> <u>Hemanth Reddy Sabbella</u>,
             <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg" target="_blank">
               "Bird Hotspots: A tinyML Acoustic Classification System for Ecological Insights",
             </a>
             <em>tinyML Asia Technical Forum</em>, 2021.
           </p>
         </li>
-      </ul>
+      </ol>
 
       <hr>
       <p style="font-size: 21px; color: var(--ocean-primary);">Patents</p>
       <hr>
 
-      <ul style="list-style: none; padding-left: 0;">
+      <ol>
         <li>
           <p>
-            PT1. <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[Granted]</span>
-            S. C. G. Kiruba Daniel, Neeraja, <u>Hemanth R. Sabbella</u>, C. S. Thakur,
+            <span style="background-color: #5cb85c; color: white; font-weight: bold; padding: 2px 6px;">[Granted]</span> S. C. G. Kiruba Daniel, Neeraja, <u>Hemanth R. Sabbella</u>, C. S. Thakur,
             "Method of Synthesis of Metal Nanoparticles with Reusable, Solid-State Reducing Agent",
             <em>Indian Patent No. 528,512</em>.
           </p>
         </li>
-      </ul>
+      </ol>
     </div>
 
     <div class="footer">
@@ -178,7 +175,7 @@
 
   </div> <!-- /container -->
 
-  <!-- javascript at the end -->
+  <!-- javascript at the end of the doc so page loads faster -->
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/library.js"></script>
