--- a/projects/index.html
+++ b/projects/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-	
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" width="device-width, initial-scale=1.0">
+  <!-- Corrected viewport meta -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Hands-on projects">
   <meta name="author" content="Hemanth Sabbella">
   <meta property="og:image" content="img/hemanth_small.jpg" />
-  <title>Projects | Hemanth </title>		
+  <title>Projects | Hemanth </title>
 
   <!-- styles -->
   <link href="/css/bootstrap.css" rel="stylesheet">
@@ -29,13 +29,84 @@
       color: var(--ocean-hover);
       text-decoration: underline;
     }
-  </style>
 
-  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!--[if lt IE 9]>
-  <script src="../../assets/js/html5shiv.js"></script>
-  <script src="../../assets/js/respond.min.js"></script>
-  <![endif]-->
+    /* Mobile-only overrides */
+    @media only screen and (max-width: 768px) {
+      /* Container padding */
+      .container { padding: 0 1rem; }
+
+      /* Fluid images */
+      img {
+        max-width: 100%;
+        height: auto;
+      }
+
+      /* Stack nav pills vertically */
+      .nav.nav-pills.pull-right {
+        float: none !important;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      .nav.nav-pills.pull-right li {
+        margin: 0.5rem 0;
+      }
+
+      /* Full-width gallery cards */
+      .projects .gallery {
+        width: 100% !important;
+        float: none;
+        margin: 0.5rem 0;
+      }
+
+      /* Fluid typography */
+      h1 { font-size: clamp(1.5rem, 5vw, 2.5rem); }
+      p  { font-size: clamp(1rem, 3vw, 1.125rem); }
+    }
+
+    /* existing desktop gallery styles */
+    div.gallery {
+      margin: 7px;
+      margin-left: 30px;
+      border: 0px solid #ccc;
+      float: left;
+      width: 200px;
+      height: 300px;
+    }
+
+    /* hover effect styles */
+    div.gallery:hover {
+      --c: #1095c1; /* the color */
+      color: #0000;
+      background: 
+        linear-gradient(90deg, #fff 50%, var(--c) 0) calc(100% - var(--_p, 0%)) / 200%,
+        linear-gradient(var(--c) 0 0) 0% 100% / var(--_p, 0%) no-repeat,
+        var(--_c, #0000);
+      -webkit-background-clip: text, padding-box, padding-box;
+              background-clip: text, padding-box, padding-box;
+      transition: 0s, color .5s, background-color .5s;
+    }
+
+    .hover:hover {
+      color: #fff;
+      --_c: var(--c);
+      --_p: 100%;
+      transition: 0.5s, color 0s .5s, background-color 0s .5s;
+    }
+
+    div.gallery img {
+      width: 100%;
+      height: auto;
+      border-radius: 3%;
+    }
+
+    div.desc {
+      padding: 10px;
+      text-align: center;
+      /* changed from #428bca */
+      color: var(--ocean-primary);
+    }
+  </style>
 </head>
 
 <body>
@@ -54,132 +125,74 @@
       </h3>
     </div> <!-- /header -->
 
-    <style>
-      div.gallery {
-        margin: 7px;
-        margin-left: 30px;
-        border: 0px solid #ccc;
-        float: left;
-        width: 200px;
-        height: 300px;
-      }
-
-      div.gallery:hover {
-        --c: #1095c1; /* the color */
-        color: #0000;
-        background: 
-          linear-gradient(90deg, #fff 50%, var(--c) 0) calc(100% - var(--_p, 0%)) / 200%,
-          linear-gradient(var(--c) 0 0) 0% 100% / var(--_p, 0%) no-repeat,
-          var(--_c, #0000);
-        -webkit-background-clip: text, padding-box, padding-box;
-                background-clip: text, padding-box, padding-box;
-        transition: 0s, color .5s, background-color .5s;
-      }
-
-      .hover:hover {
-        color: #fff;
-        --_c: var(--c);
-        --_p: 100%;
-        transition: 0.5s, color 0s .5s, background-color 0s .5s;
-      }
-
-      div.gallery img {
-        width: 100%;
-        height: auto;
-        border-radius: 3%;
-      }
-
-      div.desc {
-        padding: 10px;
-        text-align: center;
-        /* changed from #428bca */
-        color: var(--ocean-primary);
-      }
-    </style>
-
     <div class="projects">
-
       <div class="gallery">
         <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10494427">
           <img src="/img/IMG_0244.jpeg" alt="Cinque Terre" width="600" height="500">
         </a>
         <div class="desc">PA2BLO</div>
       </div>
-
       <div class="gallery">
         <a target="_blank" href="http://u-Bat.github.io/">
           <img src="/img/logo_ubat.png" alt="Cinque Terre" width="600" height="450">
         </a>
         <div class="desc">u-Bat</div>
       </div>
-
       <div class="gallery">
         <a target="_blank" href="https://hemanthsabbella.github.io/pointSpectra/">
           <img src="/img/pointSpectra.jpg" alt="Mountains" width="600" height="400">
         </a>
         <div class="desc">pointSpectra</div>
       </div>
-
       <div class="gallery">
         <a target="_blank" href="https://arxiv.org/pdf/1911.09371.pdf">
           <img src="/img/UDR_ADC.PNG" alt="Northern Lights" width="600" height="400">
         </a>
         <div class="desc">UDR-ADC prototype</div>
       </div>
-
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/Dhvani">
           <img src="/img/Dhvani.jpeg" alt="Forest" width="600" height="400">
         </a>
         <div class="desc">Dhvani</div>
       </div>
-
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/MSD_project_final.pdf">
           <img src="/img/MSD_project.png" alt="Cinque Terre" width="600" height="400">
         </a>
         <div class="desc">Gamma Brain Wave Filter</div>
       </div>
-
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/SoC%20Presentation.pdf">
           <img src="/img/Soc_project.png" alt="Forest" width="600" height="400">
         </a>
         <div class="desc">SoC Security: A logic level methodology to prevent differential power analysis</div>
       </div>
-
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/robotics_ardrone.py">
           <img src="/img/Red_ball.png" alt="Mountains" width="600" height="400">
         </a>
         <div class="desc">Red Ball Detection on Quadcopter</div>
       </div>
-
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/PCBDesign/tree/master/EMI_sensing_board/LNA-Board(DL)">
           <img src="/img/EMI.png" alt="Mountains" width="600" height="400">
         </a>
         <div class="desc">EMI Sensing Board</div>	
       </div>
-
       <div class="gallery">
         <a target="_blank" href="https://github.com/HemanthSabbella/PCBDesign/tree/master/IIITDuino_hemanth">
           <img src="/img/IIITDuino.PNG" alt="Mountains" width="600" height="400">
         </a>
         <div class="desc">IIITDuino</div>
       </div>
-
     </div>
   </div>
 
   <div class="footer">
     <div class="row">
-      <div class="col-sm-8">
-        <p><small></small></p>
-      </div>
-      <div class="col-sm-4">
-        <p class="pull-right"><small></small></p>
-      </div>
+      <div class="col-sm-8"><p><small></small></p></div>
+      <div class="col-sm-4"><p class="pull-right"><small></small></p></div>
     </div>
   </div> <!-- /footer -->
 
@@ -188,6 +201,5 @@
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/library.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.js"></script>
-
 </body>
 </html>
