--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
   <style>
     :root {
       --ocean-primary: #0096C7;
-      --ocean-hover:   #006494; /* optional hover shade */
+      --ocean-hover:   #006494;
     }
-    /* make all anchor tags ocean primary */
     a {
       color: var(--ocean-primary);
       text-decoration: none;
@@ -33,6 +32,32 @@
 
     /* Mobile-only overrides */
     @media only screen and (max-width: 768px) {
+      /* Hide desktop pills */
+      .nav.nav-pills.pull-right {
+        display: none !important;
+      }
+      /* Show mobile menu */
+      .mobile-menu {
+        display: block;
+        list-style: none;
+        padding: 0;
+        margin: 1rem 0;
+      }
+      .mobile-menu li + li {
+        margin-top: 0.75rem;
+      }
+      .mobile-menu a {
+        color: var(--ocean-primary);
+        text-decoration: none;
+        font-size: 1.125rem;
+        display: block;
+      }
+      .mobile-menu a:hover,
+      .mobile-menu a:focus {
+        color: var(--ocean-hover);
+        text-decoration: underline;
+      }
+
       /* Container padding */
       .container { padding: 0 1rem; }
 
@@ -42,17 +67,6 @@
         height: auto;
       }
 
-      /* Stack nav pills vertically */
-      .nav.nav-pills.pull-right {
-        float: none !important;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-      }
-      .nav.nav-pills.pull-right li {
-        margin: 0.5rem 0;
-      }
-
       /* Center and resize avatar */
       .avatar {
         margin: 1rem auto;
@@ -60,52 +74,41 @@
         width: 50%;
       }
 
-      /* Remove default list indent on highlights */
-      .row.marketing ul {
-        padding-left: 0;
-      }
-
       /* Fluid typography */
       h1 { font-size: clamp(1.5rem, 5vw, 2.5rem); }
       p  { font-size: clamp(1rem, 3vw, 1.125rem); }
+    }
+
+    /* Default: hide mobile menu on desktop */
+    .mobile-menu {
+      display: none;
     }
   </style>
 </head>
 
 <body>
   <div class="container">
-    <!-- Replace your old <div class="header">…</div> with this: -->
-<nav class="navbar navbar-default">
-  <div class="container">
-    <!-- Brand and toggle get grouped for mobile -->
-    <div class="navbar-header">
-      <button type="button"
-              class="navbar-toggle collapsed"
-              data-toggle="collapse"
-              data-target="#main-navbar"
-              aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/" style="text-transform: none;">
-        Hemanth Sabella
-      </a>
-    </div>
-
-    <!-- Collect the nav links -->
-    <div class="collapse navbar-collapse" id="main-navbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="/projects"      style="text-transform: none;">Projects</a></li>
-        <li><a href="/publications"  style="text-transform: none;">Publications</a></li>
-        <li><a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing"
-               style="text-transform: none;">CV</a></li>
+    <div class="header">
+      <!-- Desktop nav -->
+      <ul class="nav nav-pills pull-right">
+        <li><a href="/projects" title="Projects">Projects</a></li>
+        <li><a href="/publications" title="Publications">Publications</a></li>
+        <li class="passive">
+          <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing" title="CV">CV</a>
+        </li>
       </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container -->
-</nav>
 
+      <!-- Mobile-only menu -->
+      <ul class="mobile-menu">
+        <li><a href="/projects">Projects</a></li>
+        <li><a href="/publications">Publications</a></li>
+        <li><a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing">CV</a></li>
+      </ul>
+
+      <h3 class="text-muted">
+        <a href="/">Hemanth Sabbella</a>
+      </h3>
+    </div> <!-- /header -->
 
     <div class="row marketing">
       <div class="col-sm-4">
@@ -134,7 +137,6 @@
           </p>
         </span>
       </div>
-
       <div itemscope itemtype="http://data-vocabulary.org/Person" class="col-sm-8">
         <p>
           Hi, I'm Hemanth Sabbella, a first year PhD student at SCIS,
@@ -166,83 +168,21 @@
     </div>
 
     <div class="row marketing">
-      <!-- changed highlight color here -->
       <p style="font-size:21px; color:var(--ocean-primary);">Highlights:</p>
       <ul style="list-style:none; padding:0; margin:0;">
-        <li style="margin:0.5em 0;">
-          💼 <strong>05-2025:</strong> Started as a Visiting Student at Singapore-MIT Alliance for
-          Research and Technology Center with
-          <a href="https://m3s.mit.edu/">Mens, Manus and Machina (M3S)</a> Group
-        </li>
-        <li style="margin:0.5em 0;">
-          📝 <strong>01-2025:</strong> Workshop paper got accepted at
-          <a href="https://sites.google.com/view/comorea25/accepted-papers">CoMoRea’25</a>
-          collocated with PerCom 2025
-        </li>
-        <li style="margin:0.5em 0;">
-          🎓 <strong>08-2024:</strong> Joined as a Ph.D. student at SCIS, SMU
-        </li>
-        <li style="margin:0.5em 0;">
-          📝 <strong>07-2024:</strong> Our paper ‘D2SR’ got accepted in IROS 2024
-        </li>
-        <li style="margin:0.5em 0;">
-          📜 <strong>03-2024:</strong> Patent on Metal Nanoparticles Synthesis is granted
-        </li>
-        <li style="margin:0.5em 0;">
-          📝 <strong>12-2023:</strong> Full paper got accepted at
-          <a href="https://percom.org/2024/full-program/">PerCom 2024</a> [Acceptance rate: 14.5%]
-        </li>
-        <li style="margin:0.5em 0;">
-          📝 <strong>03-2023:</strong> A conference paper I co-authored got accepted at ACM MMSys 2023
-          [Acceptance rate: 25%]
-        </li>
-        <li style="margin:0.5em 0;">
-          📝 <strong>07-2022:</strong> Journal paper got accepted at IEEE Sensors Journal
-          [Impact factor: 4.3]
-        </li>
-        <li style="margin:0.5em 0;">
-          🚀 <strong>04-2022:</strong>
-          <a href="https://u-bat.github.io/deployment">u-Bat</a> was planned for deployment to detect
-          timber logging at Dehing Patkai National Park, Assam, India [IISc & WCS collaboration]
-        </li>
-        <li style="margin:0.5em 0;">
-          📝 <strong>01-2022:</strong> Our paper got accepted at ISCAS 2022 [Flagship Conference of the
-          IEEE CAS Society]
-        </li>
-        <li style="margin:0.5em 0;">
-          🎥 <strong>11-2021:</strong> Video Poster got accepted at
-          <a href="https://www.youtube.com/watch?v=ZgiX-gDikhg">tinyML Asia Technical Forum 2021</a>
-        </li>
-        <li style="margin:0.5em 0;">
-          🏅 <strong>11-2019:</strong> Selected for
-          <a href="https://www.linkedin.com/feed/update/urn:li:activity:6590407853843017728/">
-            MIT Hacking Medicine, Grand Hack 2019
-          </a>, USA
-        </li>
-        <li style="margin:0.5em 0;">
-          🏆 <strong>10-2019:</strong>
-          <a href="https://www.linkedin.com/feed/update/urn:li:activity:6581763632495988736/">
-            All India Winning Team
-          </a>
-          – Hackware 2019, Schneider Electric Innovation Challenge
-        </li>
+        <!-- … your highlights list … -->
       </ul>
     </div>
 
     <div class="footer">
       <div class="row">
-        <div class="col-sm-8">
-          <p><small></small></p>
-        </div>
-        <div class="col-sm-4">
-          <p class="pull-right"><small></small></p>
-        </div>
+        <div class="col-sm-8"><p><small></small></p></div>
+        <div class="col-sm-4"><p class="pull-right"><small></small></p></div>
       </div>
-    </div> <!-- /footer -->
+    </div>
+  </div>
 
-  </div> <!-- /container -->
-
-  <!-- javascript at the end of the doc so page loads faster -->
+  <!-- javascript at the end -->
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/library.js"></script>
